--- a/web.html
+++ b/web.html
@@ -9,7 +9,7 @@
 <body>
     <section class="sec-1">
         <nav>
-            <a href="#"><img src="footer/footer logo.png" alt="Logo"></a>
+            <a href="#"><img src="footer/logo.png" alt="Logo"></a>
                 <div class="nav-right">
                     <img src="bike.png">
                     <pre>Express Delivery +1 234 567 890</pre>
